--- a/Project2/PizzaAPI/PizzaAPI/appsettings.json
+++ b/Project2/PizzaAPI/PizzaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "APIConnection": "Server=.;initial catalog=PizzaAPIDB;integrated security=True;MultipleActiveResultSets=True;"
+    "APIConnection": "Server=.;initial catalog=PizzaAPIDB1;integrated security=True;MultipleActiveResultSets=True;"
   },
 
   "Logging": {
