--- a/Project2/PizzaWeb/appsettings.json
+++ b/Project2/PizzaWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;initial catalog=PizzaTest;integrated security=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=.;database=PizzaTest;integrated security=True;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
