--- a/Project2/PizzaAPI/PizzaAPI/PizzaAPI.csproj
+++ b/Project2/PizzaAPI/PizzaAPI/PizzaAPI.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190721012333_AddCustomer.cs" />
+    <Compile Remove="Migrations\20190721012333_AddCustomer.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
