--- a/Project2/PizzaWeb/appsettings.json
+++ b/Project2/PizzaWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;database=PizzaTest;integrated security=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=DESKTOP-MIHPL0M\\SQLEXPRESS;Database=WebAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
