--- a/Project2/PizzaAPI/PizzaAPI/appsettings.json
+++ b/Project2/PizzaAPI/PizzaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "APIConnection": "Server=.\\SQLEXPRESS;initial catalog=PizzaApi;integrated security=True;MultipleActiveResultSets=True;"
+    "APIConnection": "Server=DESKTOP-MIHPL0M\\SQLEXPRESS;Database=PizzaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
