--- a/Project2/PizzaAPI/PizzaAPI/appsettings.json
+++ b/Project2/PizzaAPI/PizzaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "APIConnection": "Server=tcp:pizzadb.database.windows.net,1433;Initial Catalog=PizzaDB;Persist Security Info=False;User ID=sealteam6;Password=Pizzapassword6;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "APIConnection": "Server=DESKTOP-MIHPL0M\\SQLEXPRESS;Database=PizzaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
