--- a/Project2/PizzaAPI/PizzaAPI/appsettings.json
+++ b/Project2/PizzaAPI/PizzaAPI/appsettings.json
@@ -1,7 +1,7 @@
 
 {
   "ConnectionStrings": {
-    "APIConnection": "Server=.;Database=PizzaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "APIConnection": "Server=.;initial catalog=PizzaApidb1;integrated security=true;MultipleActiveResultSets=true"
   },
 
   "Logging": {
