--- a/Project2/PizzaWeb/appsettings.json
+++ b/Project2/PizzaWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=DESKTOP-MIHPL0M\\SQLEXPRESS;Database=WebAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:pro2pizzadb.database.windows.net,1433;Initial Catalog=PizzaDB;Persist Security Info=False;User ID='pro2pizzadb';Password='P@ssword';MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   },
   "Logging": {
